--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- top image -->
     <div style="background-image:
 
-    url(https://cdn.discordapp.com/attachments/712123731367165953/976348212304678973/bftb_render_1.png);
+    url(https://media.discordapp.net/attachments/945090218732716124/984702904197865534/bftb_render_1.png);
 
     background-position:center;background-repeat:no-repeat;background-size:cover;height:100vh">
     </div>
