--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
       <ul class="nav nav-tabs navrow border-0">
 
         <li>
-          <a class="btn btn-block border-0" href="index.html" style="color:gray">
-          [BFTB LOGO HERE]
+          <a class="btn btn-block border-0" href="index.html">
+            <div style="background-image:
+
+            url(https://media.discordapp.net/attachments/945090218732716124/992562011076575275/bftb_icon.png);
+        
+            background-position:center;background-repeat:no-repeat;background-size:cover;height:100vh">
+            </div>
           </a>
         </li>
 
