--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
 
         <li>
           <a class="btn btn-block border-0" href="index.html">
-            <div style="background-image:
-
-            url(https://media.discordapp.net/attachments/945090218732716124/992562011076575275/bftb_icon.png);
-        
-            background-position:center;background-repeat:no-repeat;background-size:cover;height:100vh">
-            </div>
+            <img src="https://media.discordapp.net/attachments/712123731367165953/994451119508033557/bftb_icon_1.png" style="height:15vh;">
           </a>
         </li>
 
