--- a/index.html
+++ b/index.html
@@ -26,7 +26,23 @@
 <!-- html page -->
     <div class="page">
 <!-- header navigation -->
+      <div id="headernav">
+        <div class="row no-gutters align-items-center d-none d-md-flex">
+          <div class="col-sm-3">
+            <a href="index.html">
+              <img src="https://media.discordapp.net/attachments/712123731367165953/994451119508033557/bftb_icon_1.png" style="max-width:12vw;">
+            </a>
+          </div>
+          <div id="headerstyle" class="col-sm-9" style="max-height:10vh">
+            <div class="row no-gutters">
+              <div class="col-3"></div>
+            </div>
+            <a class="noline" href="story.html">Story</a>
+          </div>
+        </div>
+      </div>
 
+<!--
     <div id="headernav">
       <ul class="nav nav-tabs navrow border-0">
 
@@ -64,7 +80,9 @@
 
       </ul>
     </div>
+-->
 
+      
 <!-- top image -->
     <div style="background-image:
 
@@ -72,6 +90,31 @@
 
     background-position:center;background-repeat:no-repeat;background-size:cover;height:100vh">
     </div>
+
+<!-- mobile toggle -->
+      <div>
+        <div id="mobilebg" class="d-flex d-md-none">
+        </div>
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn d-flex d-md-none" for="menu__toggle">
+          <span></span>
+        </label>
+
+        <ul class="menu__box d-block d-md-none">
+          <li>
+            <a class="menu__item" href="index.html">
+              Home
+            </a>
+          </li>
+          <li>
+            <a class="menu__item" href="story.html">
+              Story
+            </a>
+          </li>
+        </ul>
+      </div>
+
+
 
 <!-- news footer -->
     <div id="footercar">
@@ -90,15 +133,8 @@
 
 <!-- main body -->
 
-<!-- temp remove...
-    <div id="container">
-      <h1 class="title"><i>Bolt from the Blue</i></h1>
 
-      <p>um. i need to make placeholder art for this. LOL</p>
-      <p>bolt from the blue is a little story abt guydudes and ummm this is my lorem ipsum sorry i just really need to test this scroll... anyways how are you all doing lol...... im having a real normal one right now if you can't tell lol</p>
-
-    </div>
--->
+<!-- ending page div -->
     </div>
   </body>
 
@@ -108,5 +144,6 @@
   BECAUSE IF NOT, IT WILL TRY TO MESS WITH ELEMENTS THAT HAVEN'T EVEN LOADED IN YET
 -->
   <script src="load.js"></script>
+  <script src="script.js"></script>
 
 </html>
